<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <include layout="@layout/header" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <ProgressBar
                android:id="@+id/pb_adb"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="6dp" />

            <TextView
                android:id="@+id/lb_adb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top|left"
                android:padding="6dp"
                android:text="@string/adb_checking"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lb_adb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top|right"
                android:padding="6dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_enable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:drawableLeft="@drawable/ic_dialog_start"
            android:paddingRight="42dp"
            android:text="@string/bt_enable" />

        <Button
            android:id="@+id/btn_disable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_dialog_stop"
            android:paddingRight="42dp"
            android:text="@string/bt_disable" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_help1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:text="@string/bt_help1" />

            <Button
                android:id="@+id/btn_help2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:text="@string/bt_help2" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>